@@ -1,77 +1,51 @@
 package com.aapeli.client;
 
-import com.aapeli.applet.AApplet;
 import com.aapeli.tools.Tools;
-import java.applet.Applet;
-import java.applet.AppletContext;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.util.StringTokenizer;
-import org.moparforia.shared.Language;
+import java.awt.Component;
+import java.awt.Desktop;
+import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.util.Map;
 import org.moparforia.shared.Locale;
 
 public final class Parameters {
 
     private static final String LOCALHOST = "127.0.0.1";
-    // private static final String aString1416 = "192.168.1.23";
     private static final String PLAYFORIA_SITE_NAME = "playforia";
     private static final String PLAYFORIA_QUIT_PAGE = "http://www.playforia.com/";
     private static final String QUIT_TARGET = "_top";
-    private Applet applet;
-    private AApplet aApplet;
-    private String codeBaseHost;
-    private String documentBaseHost;
+    private Component rootComponent;
     private String serverIp;
-    private Language language;
-    private Locale translationLocale;
-    private Locale chatLocale;
+    private Locale locale;
     private String siteName;
     private String username;
-    private String sessionLocale;
     private String session;
-    private String welcomeMessage;
-    private String quitTarget;
     private String urlRegisterPage;
-    private String urlVipPage;
     private String urlUserInfoPage;
     private String urlTargetUserInfo;
     private String urlUserListPage;
     private String urlTargetUserList;
     private String urlTellFriendPage;
     private String urlTargetTellFriend;
-    private String characterImageDir;
-    private String tournamentRound;
-    private String subgame;
-    private String ticket;
     private String json;
     private boolean tellFriend;
-    private boolean guestAutoLogin;
-    private boolean disableGuestLobbyChat;
     private int serverPort;
-    private URL urlCreditPage;
-    private URL quitPageUrl;
-    private String[][] imageAliases;
-    private int[] anIntArray1454;
+    private URI uriCreditPage;
     private int anInt1455;
     private String[] aStringArray1456;
     private String aString1457;
     private boolean debug;
+    private Map<String, String> params;
 
-    public Parameters(Applet applet) {
-        this(applet, false);
+    public Parameters(Map<String, String> params) {
+        this.params = params;
+        this.anInt1455 = 0;
+        this.init();
     }
 
-    public Parameters(Applet applet, boolean debug) {
-        this.applet = applet;
-        if (applet instanceof AApplet) {
-            this.aApplet = (AApplet) applet;
-        }
-
-        this.codeBaseHost = applet.getCodeBase().getHost().toLowerCase();
-        this.documentBaseHost = applet.getDocumentBase().getHost().toLowerCase();
-        this.anInt1455 = 0;
-        this.debug = debug;
-        this.init();
+    public void setRootComponent(Component rootComponent) {
+        this.rootComponent = rootComponent;
     }
 
     public static boolean getBooleanValue(String key) {
@@ -88,13 +62,13 @@ public final class Parameters {
     }
 
     public String getParameter(String key) {
-        String value = this.applet.getParameter(key);
+        String value = this.params.get(key);
         if (value == null) {
-            value = this.applet.getParameter(key.toLowerCase());
+            value = this.params.get(key.toLowerCase());
         }
 
         if (value == null) {
-            value = this.applet.getParameter(key.toUpperCase());
+            value = this.params.get(key.toUpperCase());
         }
 
         if (value == null) {
@@ -113,32 +87,16 @@ public final class Parameters {
         return this.serverPort;
     }
 
-    public Language language() {
-        return this.language;
-    }
-
-    public Locale getTranslationLocale() {
-        return this.translationLocale;
-    }
-
     public String getUsername() {
         return this.username;
     }
 
-    public Locale getChatLocale() {
-        return this.chatLocale != null ? this.chatLocale : this.translationLocale;
-    }
-
     public Locale getLocale() {
-        return this.getChatLocale();
+        return this.locale;
     }
 
     public String getSiteName() {
         return this.siteName;
-    }
-
-    public String getSessionLocale() {
-        return this.sessionLocale;
     }
 
     public String getSession() {
@@ -149,20 +107,8 @@ public final class Parameters {
         this.session = null;
     }
 
-    public String getWelcomeMessage() {
-        return this.welcomeMessage;
-    }
-
-    public void removeWelcomeMessage() {
-        this.welcomeMessage = null;
-    }
-
     public String getRegisterPage() {
         return this.urlRegisterPage;
-    }
-
-    public String getVipPage() {
-        return this.urlVipPage;
     }
 
     public boolean showPlayerCard(String var1) {
@@ -185,17 +131,17 @@ public final class Parameters {
                     return false;
                 }
 
-                this.showUrl(this.toURL(this.urlUserInfoPage + var1), this.urlTargetUserInfo);
+                this.showUri(this.toURI(this.urlUserInfoPage + var1), this.urlTargetUserInfo);
                 return true;
             }
 
             if (var2.startsWith("javascript:")) {
-                URL var3 = this.toURL(Tools.replaceFirst(this.urlUserInfoPage, "%n", var1));
-                if (var3 == null) {
+                URI uri = this.toURI(Tools.replaceFirst(this.urlUserInfoPage, "%n", var1));
+                if (uri == null) {
                     return false;
                 }
 
-                this.showUrl(var3, this.urlTargetUserInfo);
+                this.showUri(uri, this.urlTargetUserInfo);
                 return true;
             }
         } catch (Exception e) {
@@ -290,43 +236,15 @@ public final class Parameters {
     }
 
     public boolean showRegisterPage() {
-        return this.showUrl(this.toURL(this.urlRegisterPage), null);
-    }
-
-    public void showCreditPurchasePage() {
-        this.showCreditPurchasePage(true);
+        return this.showUri(this.toURI(this.urlRegisterPage), null);
     }
 
     public void showCreditPurchasePage(boolean openInNewTab) {
-        this.showUrl(this.urlCreditPage, openInNewTab ? "_blank" : null);
+        this.showUri(this.uriCreditPage, openInNewTab ? "_blank" : null);
     }
 
     public boolean isCreditPurchasePageAvailable() {
-        return this.urlCreditPage != null;
-    }
-
-    public void showQuitPage() {
-        this.showUrl(this.quitPageUrl, this.quitTarget);
-    }
-
-    public String[][] getImageAliases() {
-        return this.imageAliases;
-    }
-
-    public boolean isGuestAutoLogin() {
-        return this.guestAutoLogin;
-    }
-
-    public void noGuestAutoLogin() {
-        this.guestAutoLogin = false;
-    }
-
-    public boolean isGuestLobbyChattingDisabled() {
-        return this.disableGuestLobbyChat;
-    }
-
-    public String getTicket() {
-        return this.ticket;
+        return this.uriCreditPage != null;
     }
 
     public boolean callJavaScriptJSON(String json) {
@@ -340,11 +258,11 @@ public final class Parameters {
             try {
                 json = Tools.replaceAll(json, "'", "\\'");
                 String var2 = Tools.replaceFirst(this.json, "%o", "'" + json + "'");
-                URL var3 = this.toURL(var2);
-                if (var3 == null) {
+                URI uri = this.toURI(var2);
+                if (uri == null) {
                     return false;
                 } else {
-                    this.showUrl(var3, null);
+                    this.showUri(uri, null);
                     return true;
                 }
             } catch (Exception e) {
@@ -353,78 +271,26 @@ public final class Parameters {
         }
     }
 
-    public void updateWebPageInfoBox(int var1, int var2, int var3) {
-        if (this.json != null) {
-            if (var1 >= 0 || var2 >= 0 || var3 >= 0) {
-                String var4 = "{info:{";
-                if (var1 >= 0) {
-                    var4 = var4 + "credits:" + var1;
-                }
-
-                if (var2 >= 0) {
-                    if (var1 >= 0) {
-                        var4 = var4 + ',';
-                    }
-
-                    var4 = var4 + "chips:" + var2;
-                }
-
-                if (var3 >= 0) {
-                    if (var1 >= 0 || var2 >= 0) {
-                        var4 = var4 + ',';
-                    }
-
-                    var4 = var4 + "ranking:" + var3;
-                }
-
-                var4 = var4 + "}}";
-                this.callJavaScriptJSON(var4);
-            }
-        }
-    }
-
-    public Applet getApplet() {
-        return this.applet;
-    }
-
-    public AApplet getAApplet() {
-        return this.aApplet;
+    public Component getRootComponent() {
+        return this.rootComponent;
     }
 
     public void destroy() {
         this.serverIp = null;
-        this.language = null;
-        this.translationLocale = null;
-        this.chatLocale = null;
+        this.locale = null;
         this.siteName = null;
-        this.sessionLocale = null;
         this.session = null;
-        this.welcomeMessage = null;
-        this.quitTarget = null;
         this.urlRegisterPage = null;
-        this.urlVipPage = null;
         this.urlUserInfoPage = null;
         this.urlTargetUserInfo = null;
         this.urlUserListPage = null;
         this.urlTargetUserList = null;
         this.urlTellFriendPage = null;
         this.urlTargetTellFriend = null;
-        this.characterImageDir = null;
-        this.tournamentRound = null;
-        this.subgame = null;
-        this.ticket = null;
         this.json = null;
-        this.urlCreditPage = null;
-        this.imageAliases = null;
-        this.anIntArray1454 = null;
+        this.uriCreditPage = null;
         this.aStringArray1456 = null;
         this.aString1457 = null;
-        this.documentBaseHost = null;
-        this.codeBaseHost = null;
-    }
-
-    protected AppletContext getAppletContext() {
-        return this.applet.getAppletContext();
     }
 
     protected boolean getTellFriend() {
@@ -439,33 +305,14 @@ public final class Parameters {
         return this.urlTargetTellFriend;
     }
 
-    protected String getTournamentRound() {
-        return this.tournamentRound;
-    }
-
-    protected String getSubgame() {
-        return this.subgame;
-    }
-
     private void init() {
         this.serverIp = this.getParamServer();
         this.serverPort = this.getParamPort();
-        this.language = this.getParamLanguage();
-        this.translationLocale = this.getParamLocale();
-        this.chatLocale = this.getParamChatLocale();
+        this.locale = this.getParamLocale();
         this.siteName = this.getParamSiteName();
-        this.sessionLocale = this.getParameter("sessionlocale");
         this.session = this.getParameter("session");
-        this.welcomeMessage = this.getParameter("welcomemessage");
-        if (this.welcomeMessage == null) {
-            this.welcomeMessage = this.getParameter("gamewelcome");
-        }
-
-        this.quitPageUrl = this.getParamQuitPage();
-        this.quitTarget = this.getParamQuitTarget();
         this.urlRegisterPage = this.getParameter("registerpage");
-        this.urlVipPage = this.getParameter("vippage");
-        this.urlCreditPage = this.toURL(this.getParameter("creditpage"));
+        this.uriCreditPage = this.toURI(this.getParameter("creditpage"));
         this.urlUserInfoPage = this.getParameter("userinfopage");
         this.urlTargetUserInfo = this.getParameter("userinfotarget");
         this.urlUserListPage = this.getParameter("userlistpage");
@@ -473,16 +320,9 @@ public final class Parameters {
         this.tellFriend = Tools.getBoolean(this.getParameter("tellfriend"));
         this.urlTellFriendPage = this.getParameter("tellfriendpage");
         this.urlTargetTellFriend = this.getParameter("tellfriendtarget");
-        this.anIntArray1454 = this.getParamRegRemindShowTime();
-        this.characterImageDir = this.getParameter("characterimagedir");
-        this.imageAliases = this.getParamImageAliases();
-        this.guestAutoLogin = Tools.getBoolean(this.getParameter("guestautologin"));
-        this.disableGuestLobbyChat = Tools.getBoolean(this.getParameter("disableguestlobbychat"));
-        this.tournamentRound = this.getParameter("tournamentround");
-        this.subgame = this.getParameter("subgame");
-        this.ticket = this.getParameter("ticket");
         this.json = this.getParameter("json");
         this.username = this.getParameter("username");
+        this.debug = Tools.getBoolean(this.getParameter("verbose"));
         if (this.json != null) {
             this.json = Tools.replaceFirst(this.json, "'%o'", "%o");
             if (!this.json.toLowerCase().startsWith("javascript:")) {
@@ -497,7 +337,7 @@ public final class Parameters {
             int portIndex = server.lastIndexOf(':');
             return server.substring(0, portIndex);
         } catch (Exception e) {
-            return this.codeBaseHost.length() > 0 ? this.codeBaseHost : LOCALHOST;
+            return LOCALHOST;
         }
     }
 
@@ -515,45 +355,6 @@ public final class Parameters {
         }
     }
 
-    private Language getParamLanguage() {
-        String language;
-        try {
-            language = this.getParameter("language");
-            if (language != null) {
-                return Language.fromString(language);
-            }
-        } catch (Exception e) {
-        }
-
-        if (this.codeBaseHost.endsWith("aapeli.com")) {
-            return Language.FINNISH;
-        } else if (this.codeBaseHost.endsWith("playray.com")) {
-            return Language.ENGLISH;
-        } else {
-            if (this.codeBaseHost.endsWith(".playforia.com")) {
-                try {
-                    language = this.codeBaseHost.substring(0, this.codeBaseHost.indexOf(46));
-                    if (language.length() > 0 && !language.equals("www")) {
-                        return Language.fromString(language);
-                    }
-                } catch (Exception e) {
-                }
-            }
-
-            if (this.codeBaseHost.contains("playray")) {
-                try {
-                    language = this.codeBaseHost.substring(this.codeBaseHost.lastIndexOf(46) + 1);
-                    if (language.length() > 0) {
-                        return Language.fromString(language);
-                    }
-                } catch (Exception e) {
-                }
-            }
-
-            return Language.ENGLISH;
-        }
-    }
-
     private Locale getParamLocale() {
         try {
             String locale = this.getParameter("locale");
@@ -567,141 +368,18 @@ public final class Parameters {
         return null;
     }
 
-    private Locale getParamChatLocale() {
-        try {
-            String chatLocale = this.getParameter("chatlocale");
-            if (chatLocale != null) {
-                return Locale.fromString(chatLocale);
-            }
-
-            chatLocale = this.getParameter("serverlocale");
-            if (chatLocale != null) {
-                return Locale.fromString(chatLocale);
-            }
-        } catch (Exception e) {
-        }
-
-        return null;
-    }
-
     private String getParamSiteName() {
-        try {
-            String siteName = this.getParameter("sitename");
-            if (siteName != null) {
-                return siteName;
-            }
-        } catch (Exception e) {
-        }
-
-        if (this.documentBaseHost.contains("aapeli.")) {
-            return "aapeli";
-        } else if (this.documentBaseHost.contains("playforia.")) {
-            return PLAYFORIA_SITE_NAME;
-        } else if (this.documentBaseHost.contains("playray.")) {
-            return "playray";
+        String siteName = this.getParameter("sitename");
+        if (siteName != null) {
+            return siteName;
         }
         return PLAYFORIA_SITE_NAME;
     }
 
-    private URL getParamQuitPage() {
-        URL quitPage = this.toURL(this.getParameter("quitpage"));
-        if (quitPage != null) {
-            return quitPage;
-        } else {
-            quitPage = this.toURL(this.documentBaseHost);
-            return quitPage != null ? quitPage : this.toURL(PLAYFORIA_QUIT_PAGE);
-        }
-    }
-
-    private String getParamQuitTarget() {
-        String quitTarget = this.getParameter("quittarget");
-        return quitTarget != null ? quitTarget : QUIT_TARGET;
-    }
-
-    private String[][] getParamImageAliases() {
-        String imageAliases = this.getParameter("imagealias");
-        if (imageAliases == null) {
-            return null;
-        } else {
-            StringTokenizer tokenizer = new StringTokenizer(imageAliases, " ");
-            int tokenCount = tokenizer.countTokens();
-            if (tokenCount == 0) {
-                return null;
-            } else {
-                String[][] result = new String[tokenCount][2];
-
-                for (int i = 0; i < tokenCount; ++i) {
-                    String token = tokenizer.nextToken();
-                    int var6 = token.indexOf(':');
-                    if (var6 <= 0 || var6 == token.length() - 1) {
-                        return null;
-                    }
-
-                    result[i][0] = token.substring(0, var6);
-                    result[i][1] = this.method1670(token.substring(var6 + 1));
-                }
-
-                return result;
-            }
-        }
-    }
-
-    private String method1670(String var1) {
-        StringTokenizer var2 = new StringTokenizer(var1, ",");
-        int var3 = var2.countTokens();
-        if (var3 <= 1) {
-            return var1;
-        } else {
-            int var4 = (int) (Math.random() * (double) var3);
-
-            while (true) {
-                var1 = var2.nextToken();
-                if (var4 == 0) {
-                    return var1;
-                }
-
-                --var4;
-            }
-        }
-    }
-
-    private int[] getParamRegRemindShowTime() {
-        String regRemindShowTime = this.getParameter("regremindshowtime");
-        if (regRemindShowTime == null) {
-            return null;
-        } else {
-            StringTokenizer tokenizer = new StringTokenizer(regRemindShowTime, ",");
-            int tokenCount = tokenizer.countTokens();
-            if (tokenCount == 0) {
-                return null;
-            } else {
-                int[] result = new int[tokenCount];
-
-                for (int i = 0; i < tokenCount; ++i) {
-                    try {
-                        result[i] = Integer.parseInt(tokenizer.nextToken());
-                    } catch (NumberFormatException e) {
-                        return null;
-                    }
-
-                    if (result[i] <= 0) {
-                        return null;
-                    }
-
-                    if (i > 0 && result[i] <= result[i - 1]) {
-                        return null;
-                    }
-                }
-
-                return result;
-            }
-        }
-    }
-
-    private URL toURL(String s) {
+    private URI toURI(String s) {
         try {
-            return new URL(s);
-        } catch (MalformedURLException e) {
+            return new URI(s);
+        } catch (URISyntaxException e) {
             return null;
         }
     }
@@ -746,19 +424,19 @@ public final class Parameters {
                         }
                     }
 
-                    this.showUrl(this.toURL(var8), this.urlTargetUserList);
+                    this.showUri(this.toURI(var8), this.urlTargetUserList);
                 }
             } else {
                 if (var4.startsWith("javascript:")) {
                     var8 = this.urlUserListPage;
                     var8 = Tools.replaceFirst(var8, "%n", result != null ? result : "");
                     var8 = Tools.replaceFirst(var8, "%s", subgame != null ? subgame : "");
-                    URL var9 = this.toURL(var8);
-                    if (var9 == null) {
+                    URI uri = this.toURI(var8);
+                    if (uri == null) {
                         return;
                     }
 
-                    this.showUrl(var9, this.urlTargetUserList);
+                    this.showUri(uri, this.urlTargetUserList);
                 }
             }
         }
@@ -811,17 +489,15 @@ public final class Parameters {
         }
     }
 
-    private boolean showUrl(URL url, String target) {
-        if (url == null) {
+    private boolean showUri(URI uri, String target) {
+        if (uri == null) {
             return false;
         } else {
-            AppletContext appletContext = this.applet.getAppletContext();
-            if (target != null) {
-                appletContext.showDocument(url, target);
-            } else {
-                appletContext.showDocument(url);
+            try {
+                Desktop.getDesktop().browse(uri);
+            } catch (IOException e) {
+                return false;
             }
-
             return true;
         }
     }
